js/js.translator/testData/incremental/invalidation/fakeOverrideClassFunctionQualifiers/lib1/l1.0.kt
open class Module2OpenClass {
    public suspend fun testFunction2() = 2
}
